--- a/configs/simsiam_cub200.yaml
+++ b/configs/simsiam_cub200.yaml
@@ -1,4 +1,4 @@
-name: simsiam-cub200-experiment-resnet18_cub200_variant1
+name: simsiam-cub200-experiment-resnet50_cub200_variant1
 dataset: 
   name: cub200
   image_size: 224
@@ -6,7 +6,7 @@ dataset:
 
 model: 
   name: simsiam
-  backbone: resnet18_cifar_variant1
+  backbone: resnet50_cub200
   proj_layers: 2
 
 train:
@@ -22,7 +22,7 @@ train:
   stop_at_epoch: 100 # has to be smaller than num_epochs
   batch_size: 32
   knn_monitor: True # knn monitor will take more time
-  knn_interval: 5
+  knn_interval: 3
   knn_k: 200
 eval: # linear evaluation, False will turn off automatic evaluation after training
   optimizer: 
@@ -33,7 +33,7 @@ eval: # linear evaluation, False will turn off automatic evaluation after traini
   warmup_epochs: 0
   base_lr: 30
   final_lr: 0
-  batch_size: 32
+  batch_size: 64
   num_epochs: 100
 
 logger:
