--- a/configs/simsiam_imagenet100.yaml
+++ b/configs/simsiam_imagenet100.yaml
@@ -1,12 +1,12 @@
-name: simsiam-cifar10-experiment-resnet18_cifar_variant1
+name: simsiam-imagenet100-experiment-resnet50_imagenet100_variant1
 dataset: 
-  name: cifar10
-  image_size: 32
+  name: imagenet100
+  image_size: 224
   num_workers: 4
 
 model: 
   name: simsiam
-  backbone: resnet18_cifar_variant1
+  backbone: resnet50_cub200
   proj_layers: 2
 
 train:
@@ -18,9 +18,9 @@ train:
   warmup_lr: 0
   base_lr: 0.03
   final_lr: 0
-  num_epochs: 200 # this parameter influence the lr decay
-  stop_at_epoch: 200 # has to be smaller than num_epochs
-  batch_size: 512
+  num_epochs: 100 # this parameter influence the lr decay
+  stop_at_epoch: 100 # has to be smaller than num_epochs
+  batch_size: 64
   knn_monitor: True # knn monitor will take more time
   knn_interval: 3
   knn_k: 200
@@ -33,7 +33,7 @@ eval: # linear evaluation, False will turn off automatic evaluation after traini
   warmup_epochs: 0
   base_lr: 30
   final_lr: 0
-  batch_size: 256
+  batch_size: 64
   num_epochs: 100
 
 logger:
