--- a/configs/byol_stanfordcars.yaml
+++ b/configs/byol_stanfordcars.yaml
@@ -12,6 +12,7 @@ train:
   optimizer: 
     name: lars_simclr
     weight_decay: 1.5e-6
+    momentum: 0.9
   warmup_epochs: 10
   warmup_lr: 0
   base_lr: 0.3
