--- a/configs/simsiam_aircrafts.yaml
+++ b/configs/simsiam_aircrafts.yaml
@@ -1,12 +1,12 @@
-name: simsiam-cub200-experiment-resnet50_cub200_variant1
+name: simsiam-aircrafts-resnet50-experiment
 dataset: 
-  name: cub200
+  name: aircrafts
   image_size: 224
   num_workers: 4
 
 model: 
   name: simsiam
-  backbone: resnet50_cub200
+  backbone: resnet50_aircrafts
   proj_layers: 2
 
 train:
@@ -20,7 +20,7 @@ train:
   final_lr: 0
   num_epochs: 100 # this parameter influence the lr decay
   stop_at_epoch: 100 # has to be smaller than num_epochs
-  batch_size: 16
+  batch_size: 128
   knn_monitor: True # knn monitor will take more time
   knn_interval: 3
   knn_k: 200
@@ -33,7 +33,7 @@ eval: # linear evaluation, False will turn off automatic evaluation after traini
   warmup_epochs: 0
   base_lr: 30
   final_lr: 0
-  batch_size: 16
+  batch_size: 128
   num_epochs: 100
 
 logger:
